# gb3-core

./: .gitignore  .gitmodules  CHANGES.MD  CMakeLists.txt  README.MD  SDL2-WHATS-MISSING.txt  config-linux32.sh  vcpkg.json
Source/CoreRuntime/ToolLibs/: CMakeLists.txt
Source/CoreRuntime/UtilityLibs/: CMakeLists.txt
Source/Foundation/efd/: Archive.cpp  Archive.h  Archive.inl  AssertDialog.h  Asserts.h  AssetApplicationInfoMsg.cpp  AssetApplicationInfoMsg.h  AssetCacheResponse.cpp  AssetCacheResponse.h  AssetCacheResponse.inl  AssetChangeHandler.h  AssetConfigService.cpp  AssetConfigService.h  AssetConfigService.inl  AssetFactoryManager.cpp  AssetFactoryManager.h  AssetFactoryManager.inl  AssetID.cpp  AssetID.h  AssetID.inl  AssetLoadRequest.cpp  AssetLoadRequest.h  AssetLoadRequest.inl  AssetLoadResponse.cpp  AssetLoadResponse.h  AssetLoadResponse.inl  AssetLoaderThreadFunctor.cpp  AssetLoaderThreadFunctor.h  AssetLoaderThreadFunctor.inl  AssetLocatorRequest.cpp  AssetLocatorRequest.h  AssetLocatorResponse.cpp  AssetLocatorResponse.h  AssetLocatorService.cpp  AssetLocatorService.h  AssetMetaGraph.cpp  AssetMetaGraph.h  AssetUriReader.cpp  AssetUriReader.h  AssetUtil.cpp  (+308 more)
Source/Foundation/efdLogService/: CMakeLists.txt  LogService.cpp  LogService.h  LogServiceMessages.cpp  LogServiceMessages.h  NetDestination.cpp  NetDestination.h  efdLogServiceLibType.h  efdLogServicePCH.h
Source/Foundation/efdNetwork/: BridgeService.cpp  BridgeService.h  CMakeLists.txt  ChannelManagerConfig.h  ChannelManagerConfig.inl  ChannelManagerService.cpp  ChannelManagerService.h  ConnectionTCP.cpp  ConnectionTCP.h  ConnectionTCP.inl  HostInfo.h  IConnection.cpp  IConnection.h  INetLib.cpp  INetLib.h  INetLib.inl  INetTransport.h  NameResolutionMessage.cpp  NameResolutionMessage.h  NameResolutionMessage.inl  NameResolutionService.cpp  NameResolutionService.h  Net.h  NetCategory.h  NetErrorMessage.cpp  NetErrorMessage.h  NetErrorMessage.inl  NetLib.cpp  NetLib.h  NetListener.h  NetListener.inl  NetService.cpp  NetService.h  NetService.inl  NetTransportTCP.cpp  NetTransportTCP.h  NetVersion.cpp  NetVersion.h  NetworkMessages.cpp  NetworkMessages.h  (+11 more)
Source/GameFramework/: CMakeLists.txt
Source/GameFramework/ecr/: AttachNifData.cpp  AttachNifData.h  AttachNifData.inl  CMakeLists.txt  CameraData.cpp  CameraData.h  CameraService.cpp  CameraService.h  CameraService.inl  CoreRuntimeMessages.cpp  CoreRuntimeMessages.h  CoreRuntimeMessages.inl  CoreRuntimePropertyTypes.cpp  CoreRuntimePropertyTypes.h  IAttachedObjectsProperty.cpp  IAttachedObjectsProperty.h  IDefaultSurfaceCreator.h  IRenderServiceDelegate.cpp  IRenderServiceDelegate.h  LightService.cpp  LightService.h  LightService.inl  MeshModel.cpp  MeshModel.h  NIFFactory.cpp  NIFFactory.h  NIFFactoryResponse.cpp  NIFFactoryResponse.h  NIFFactoryResponse.inl  PickService.cpp  PickService.h  PickService.inl  RenderContext.cpp  RenderContext.h  RenderContext.inl  RenderService.cpp  RenderService.h  RenderService.inl  RenderSurface.cpp  RenderSurface.h  (+28 more)
Source/GameFramework/ecrInput/: CMakeLists.txt  ControlBuiltins.cpp  ControlBuiltins.h  InputActionMapsLoaded.cpp  InputActionMapsLoaded.h  InputActionMessage.cpp  InputActionMessage.h  InputActionMessage.inl  InputHandler.cpp  InputHandler.h  InputService.cpp  InputService.h  InputService.inl  InputServiceAction.cpp  InputServiceAction.h  InputServiceAction.inl  InputServiceActionBase.cpp  InputServiceActionBase.h  InputServiceActionBase.inl  InputServiceActionMap.cpp  InputServiceActionMap.h  InputServiceActionMap.inl  InputServiceDPad.cpp  InputServiceDPad.h  InputServiceDPad.inl  InputServiceEvent.cpp  InputServiceEvent.h  InputServiceEvent.inl  InputServiceMouse.cpp  InputServiceMouse.h  InputServiceStick.cpp  InputServiceStick.h  InputServiceStick.inl  InputStickMessage.cpp  InputStickMessage.h  InputStickMessage.inl  KeyboardMessages.cpp  KeyboardMessages.h  KeyboardMessages.inl  MouseMessages.cpp  (+5 more)
Source/GameFramework/egf/: BasicTypes.i  BehaviorAPI.cpp  BehaviorAPI.h  BehaviorAPI.i  BehaviorDescriptor.cpp  BehaviorDescriptor.h  BlockIdentification.cpp  BlockIdentification.h  BlockIdentification.inl  BlockLoadParameters.cpp  BlockLoadParameters.h  BlockLoadParameters.inl  BreakpointMessages.cpp  BreakpointMessages.h  BreakpointMessages.inl  BuiltinModelDescriptor.h  BuiltinModelDescriptor.inl  BuiltinModelHelper.h  BuiltinModelHelper_details.inl  CMakeLists.txt  Entity.cpp  Entity.h  Entity.inl  EntityChangeMessage.cpp  EntityChangeMessage.h  EntityChangeMessage.inl  EntityFactory.cpp  EntityFactory.h  EntityFactoryRequest.cpp  EntityFactoryRequest.h  EntityFactoryResponse.cpp  EntityFactoryResponse.h  EntityID.h  EntityID.inl  EntityIDFactory.cpp  EntityIDFactory.h  EntityLoaderMessages.cpp  EntityLoaderMessages.h  EntityLoaderService.cpp  EntityLoaderService.h  (+112 more)
Source/GameFramework/egmAnimation/: ActorMessages.cpp  ActorMessages.h  ActorMessages.inl  ActorModel.cpp  ActorModel.h  AnimationService.cpp  AnimationService.h  AnimationService.inl  CMakeLists.txt  KFMCache.cpp  KFMCache.h  KFMCache.inl  KFMCacheResponse.cpp  KFMCacheResponse.h  KFMCacheResponse.inl  KFMFactory.cpp  KFMFactory.h  KFMFactoryRequest.cpp  KFMFactoryRequest.h  KFMFactoryResponse.cpp  KFMFactoryResponse.h  egmAnimation.i  egmAnimationBindings.cpp  egmAnimationBindings.h  egmAnimationLibType.h  egmAnimationPCH.h
Source/GameFramework/egmTerrain/: CMakeLists.txt  EnvironmentService.cpp  EnvironmentService.h  EnvironmentService.inl  TTimeOfDayEntityFunctor.h  TTimeOfDayEntityFunctor.inl  TerrainChangedMessage.cpp  TerrainChangedMessage.h  TerrainChangedMessage.inl  TerrainService.cpp  TerrainService.h  TerrainService.inl  TimeOfDayFile.cpp  TimeOfDayFile.h  TimeOfDayFile.inl  TimeOfDayFileVersion1.cpp  TimeOfDayFileVersion1.h  TimeOfDayMessages.cpp  TimeOfDayMessages.h  TimeOfDayMessages.inl  egmTerrain.i  egmTerrainBindings.cpp  egmTerrainBindings.h  egmTerrainLibType.h  egmTerrainPCH.h
Source/GameFramework/egmToolServices/: BoxSelectionFunctor.h  CMakeLists.txt  ConditionalMaterialSwapProcessor.cpp  CreationGizmo.cpp  (+100 more)
(+2947 files in other folders)
