set(SRC
    bapiBlock.cpp
    bapiBlock.h
    bapiConfig.cpp
    bapiConfig.h
    bapiEntity.cpp
    bapiEntity.h
    bapiInternal.h
    BasicTypes.i
    BehaviorAPI.cpp
    BehaviorAPI.h
    BehaviorAPI.i
    BehaviorDescriptor.cpp
    BehaviorDescriptor.h
    BlockIdentification.cpp
    BlockIdentification.h
    BlockIdentification.inl
    BlockLoadParameters.cpp
    BlockLoadParameters.h
    BlockLoadParameters.inl
    BreakpointMessages.cpp
    BreakpointMessages.h
    BreakpointMessages.inl
    BuiltinModelDescriptor.h
    BuiltinModelDescriptor.inl
    BuiltinModelHelper.h
    BuiltinModelHelper_details.inl
    egfBaseIDs.h
    egfClassIDs.h
    egfLibType.h
    egfLogIDs.h
    egfMessageIDs.h
    egfPCH.h
    egfPropertyIDs.h
    egfSDM.cpp
    egfSDM.h
    egfSystemServiceIDs.h
    Entity.cpp
    Entity.h
    Entity.inl
    EntityChangeMessage.cpp
    EntityChangeMessage.h
    EntityChangeMessage.inl
    EntityFactory.cpp
    EntityFactory.h
    EntityFactoryRequest.cpp
    EntityFactoryRequest.h
    EntityFactoryResponse.cpp
    EntityFactoryResponse.h
    EntityID.h
    EntityID.inl
    EntityIDFactory.cpp
    EntityIDFactory.h
    EntityLoaderMessages.cpp
    EntityLoaderMessages.h
    EntityLoaderService.cpp
    EntityLoaderService.h
    EntityLoaderService.inl
    EntityManager.cpp
    EntityManager.h
    EntityManager.inl
    EntitySetLoadState.cpp
    EntitySetLoadState.h
    EntityTypes.h
    EventID.cpp
    EventID.h
    EventMessage.cpp
    EventMessage.h
    ExtraData.cpp
    ExtraData.h
    FlatModel.cpp
    FlatModel.h
    FlatModelFactory.cpp
    FlatModelFactory.h
    FlatModelFactoryRequest.cpp
    FlatModelFactoryRequest.h
    FlatModelFactoryResponse.cpp
    FlatModelFactoryResponse.h
    FlatModelManager.cpp
    FlatModelManager.h
    FlatModelManager.inl
    GameFramework.h
    GamePauseRequest.h
    GameResumeRequest.h
    GameTimeClock.cpp
    GameTimeClock.h
    IBuiltinModel.cpp
    IBuiltinModel.h
    IBuiltinModelImpl.cpp
    IBuiltinModelImpl.h
    ICppAPI.h
    IDebuggerCallback.h
    IProperty.cpp
    IProperty.h
    IProperty.inl
    IPropertyCallback.h
    IPropertyCallbackInvoker.h
    IPropertyCallbackInvoker.inl
    IPropertyType.h
    ISchedulerScripting.cpp
    ISchedulerScripting.h
    IScriptFactory.h
    NotificationService.cpp
    NotificationService.h
    PendingBehavior.cpp
    PendingBehavior.h
    PendingBehavior.inl
    PlaceableModel.cpp
    PlaceableModel.h
    PlaceableModel.inl
    PrimitiveProperties.cpp
    PrimitiveProperties.h
    PropertyDescriptor.cpp
    PropertyDescriptor.h
    PropertyDescriptor.inl
    RapidIterationService.cpp
    RapidIterationService.h
    SAXBlockParser.cpp
    SAXBlockParser.h
    SAXEntityParser.cpp
    SAXEntityParser.h
    SAXModelParser.cpp
    SAXModelParser.h
    ScheduledTask.cpp
    ScheduledTask.h
    ScheduledTask.inl
    Scheduler.cpp
    Scheduler.h
    Scheduler.inl
    SchedulerQueue.cpp
    SchedulerQueue.h
    SchedulerQueue.inl
    ScriptContext.cpp
    ScriptContext.h
    ScriptContext.inl
    ScriptFactoryRequest.cpp
    ScriptFactoryRequest.h
    ScriptFactoryResponse.cpp
    ScriptFactoryResponse.h
    ServiceAllocator.cpp
    ServiceAllocator.h
    SimDebugger.cpp
    SimDebugger.h
    SimDebugger.inl
    SimDebuggerMessages.cpp
    SimDebuggerMessages.h
    SimDebuggerMessages.inl
    StandardModelLibraryBehaviorIDs.h
    StandardModelLibraryFlatModelIDs.h
    StandardModelLibraryPropertyIDs.h
    TProperty.h
    UtilityProperties.cpp
    UtilityProperties.h
    Warnings.i
    WorldFactory.cpp
    WorldFactory.h
    WorldFactoryRequest.cpp
    WorldFactoryRequest.h
    WorldFactoryResponse.cpp
    WorldFactoryResponse.h
    WorldResetRequest.h
)

set(SWIG_SRC
    Warnings.i
    BehaviorAPI.i
    BasicTypes.i
)

add_library(egf STATIC ${SRC})
set_target_properties(egf PROPERTIES FOLDER "${GB3_PREFIX}GameFramework")
target_precompile_headers(egf PRIVATE egfPCH.h)
target_link_libraries(egf PUBLIC NiMain)
target_include_directories(egf PUBLIC ${CMAKE_CURRENT_LIST_DIR}/../)
SwigTarget(egf ${SWIG_SRC})
