set(SRC 
    BoxSelectionFunctor.h
    ConditionalMaterialSwapProcessor.cpp
    ConditionalMaterialSwapProcessor.h
    CreationGizmo.cpp
    CreationGizmo.h
    CreationGizmoAdapter.cpp
    CreationGizmoAdapter.h
    CreationGizmoPolicy.cpp
    CreationGizmoPolicy.h
    CustomScreenFillingRenderView.cpp
    CustomScreenFillingRenderView.h
    CustomScreenFillingRenderView.inl
    egmToolServicesClassIDs.h
    egmToolServicesLibType.h
    egmToolServicesMessageIDs.h
    egmToolServicesPCH.h
    EntityCreationGizmoAdapter.cpp
    EntityCreationGizmoAdapter.h
    EntityGizmoAdapter.cpp
    EntityGizmoAdapter.h
    EntityGizmoPolicy.cpp
    EntityGizmoPolicy.h
    EntitySelectionAdapter.cpp
    EntitySelectionAdapter.h
    FlatWireframeRenderClick.cpp
    FlatWireframeRenderClick.h
    GizmoAdapter.cpp
    GizmoAdapter.h
    GizmoPolicy.cpp
    GizmoPolicy.h
    GizmoService.cpp
    GizmoService.h
    GizmoService.inl
    GridService.cpp
    GridService.h
    GridService.inl
    ICameraMode.h
    IGizmo.cpp
    IGizmo.h
    IInteractableService.h
    IInteractionDelegate.cpp
    IInteractionDelegate.h
    InteractionService.cpp
    InteractionService.h
    MeshPrimitiveInFrustumFunctor.h
    NoTexturesRenderClick.cpp
    NoTexturesRenderClick.h
    OrbitCameraMode.cpp
    OrbitCameraMode.h
    PanCameraMode.cpp
    PanCameraMode.h
    PerVertexLightingProcessor.cpp
    PerVertexLightingProcessor.h
    PropertySwapProcessor.cpp
    PropertySwapProcessor.h
    PropertySwapProcessor.inl
    RotationGizmo.cpp
    RotationGizmo.h
    ScaleGizmo.cpp
    ScaleGizmo.h
    SelectionAdapter.cpp
    SelectionAdapter.h
    SelectionGizmo.cpp
    SelectionGizmo.h
    SelectionService.cpp
    SelectionService.h
    SelectionService.inl
    StandardCameraMode.cpp
    StandardCameraMode.h
    TerrainEditGizmo.cpp
    TerrainEditGizmo.h
    TerrainEditGizmo.inl
    TerrainPaintingGuide.cpp
    TerrainPaintingGuide.h
    TerrainPaintingGuide.inl
    TerrainPhysXSaveDataPolicy.cpp
    TerrainPhysXSaveDataPolicy.h
    ToolCamera.cpp
    ToolCamera.h
    ToolCameraService.cpp
    ToolCameraService.h
    ToolCameraService.inl
    ToolEnvironmentService.cpp
    ToolEnvironmentService.h
    ToolLightService.cpp
    ToolLightService.h
    ToolSceneService.cpp
    ToolSceneService.h
    ToolSceneService.inl
    ToolServicesMessages.cpp
    ToolServicesMessages.h
    ToolServicesMessages.inl
    ToolSnapService.cpp
    ToolSnapService.h
    ToolTerrainService.cpp
    ToolTerrainService.h
    ToolTerrainService.inl
    TransformGizmo.cpp
    TransformGizmo.h
    TransformGizmoAdapter.cpp
    TransformGizmoAdapter.h
    TranslationGizmo.cpp
    TranslationGizmo.h
    WireframeRenderClick.cpp
    WireframeRenderClick.h
)

add_library(egmToolServices STATIC ${SRC})
target_precompile_headers(egmToolServices PRIVATE egmToolServicesPCH.h)
set_target_properties(egmToolServices PROPERTIES FOLDER "${GB3_PREFIX}GameFramework")
target_link_libraries(egmToolServices PUBLIC egf ecr NiTerrain NiViewMath NiPortal NiEnvironment NiFont)
